# AURA_Bike_PFE

./: README.md
App_mobile/: app.css  app.js  ble.js  index.html  maps.js
Module_IMU/: CMakeLists.txt  partitions_two_ota.csv  sdkconfig  sdkconfig 2  sdkconfig.old
Module_IMU/main/: CMakeLists.txt  app_nvs.c  app_nvs.h  aws_mqtt.c  aws_mqtt.h  bike_data.c  bike_data.h  gnss_link.c  gnss_link.h  gy86.c  gy86.h  http_server.c  http_server.h  idf_component.yml  lcd_lvgl.c  lcd_lvgl.h  lcd_pins.h  main.c  sntp_time_sync.c  sntp_time_sync.h  tasks_common.h  wifi_app.c  wifi_app.h  wifi_reset_button.c  wifi_reset_button.h
Module_IMU/main/certs/: certificate.pem.crt  public.pem.key
Module_IMU/main/webpage/: app.js  route.js  storage.js
Module_caméra/Algo detection/: aura_bike_alert.py  aura_bike_ttc_ui.py  test_detection.py
Module_caméra/PFE/CAM/: CAM.ino
Module_caméra/PFE/CAM/cam_2/: cam_2.ino
Module_caméra/PFE/ECRAN/: ECRAN.ino
Module_caméra/PFE/ECRAN/ecran_2/: ecran_2.ino
Module_caméra/PFE/TF_LUNA/: TF_LUNA.ino
